User List & Create, Site loading and other

--- a/src/app/Layout/header/header.component.html
+++ b/src/app/Layout/header/header.component.html
@@ -1,14 +1,14 @@
 <div class="header">
     <div class="logo logo-dark">
-        <a href="index.html">
-            <img src="assets/images/logo/logo.png" alt="Logo">
-            <img class="logo-fold" src="assets/images/logo/logo-fold.png" alt="Logo">
+        <a href="index.html" style="text-align: center !important;">
+            <img src="assets/images/Logo.png" alt="Logo" style="width: 50px" class="m-t-5">
+                <img src="assets/images/Logo.png" alt="Logo" style="width: 50px;margin: 5px auto !important;" class="m-t-5 logo-fold">
         </a>
     </div>
     <div class="logo logo-white">
         <a href="index.html">
-            <img src="assets/images/logo/logo-white.png" alt="Logo">
-            <img class="logo-fold" src="assets/images/logo/logo-fold-white.png" alt="Logo">
+            <img src="assets/images/Logo.png" alt="Logo" class="w-100">
+            <img class="logo-fold" src="assets/images/Logo.png" alt="Logo" class="w-100">
         </a>
     </div>
     <div class="nav-wrap">
@@ -30,6 +30,11 @@
             </li>
         </ul>
         <ul class="nav-right">
+            <li>
+                <a href="https://www.digifile.com">
+                    <i class="anticon anticon-home m-r-10"></i> <span style="font-size: 15px;">see website</span>
+                </a>
+            </li>
             <li class="dropdown dropdown-animated scale-left">
                 <a href="javascript:void(0);" data-toggle="dropdown">
                     <i class="anticon anticon-bell notification-badge"></i>
@@ -149,11 +154,6 @@
                         </div>
                     </a>
                 </div>
-            </li>
-            <li>
-                <a href="javascript:void(0);" data-toggle="modal" data-target="#quick-view">
-                    <i class="anticon anticon-appstore"></i>
-                </a>
             </li>
         </ul>
     </div>
