--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,118 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li.active {
+    background-color: rgba(63, 135, 245, 0.15) !important;
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li.active a {
+    color: #3f87f5
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li.dropdown ul.dropdown-menu>li>a:hover,.side-nav .side-nav-inner .side-nav-menu>li.dropdown ul.dropdown-menu>li>a:focus {
+    background-color: transparent;
+    color: #2a2a2a
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li >a:hover {
+    background-color: #eee;
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    transform: scaleY(0.0001);
+    -webkit-transform: scaleY(0.0001);
+    -moz-transform: scaleY(0.0001);
+    -o-transform: scaleY(0.0001);
+    -ms-transform: scaleY(0.0001);
+    transition: opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transition: opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
+    -moz-transition: opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
+    -o-transition: opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
+    -ms-transition: opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
+    opacity: 0;
+    border-right: 2px solid;
+    border-color: #3f87f5 !important
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li > ul > li:not(.active) > a:hover {
+    background-color: #eee !important;
+}
+
+.side-nav .side-nav-inner .side-nav-menu>li.active:after {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    opacity: 1
+}
+
+.Custom-Item {
+    padding: 10px 20px;
+    background-color: #eee;
+    margin-left: 0;
+    border-radius: 100px;
+    text-align: center;
+}
+
+
+.Custom-Item.success {
+    background-color: #28D094;
+    color: #fff;
+}
+
+.Custom-Item.info {
+    background-color: #3F51B5;
+    color: #fff;
+}
+
+.Custom-Item.danger {
+    background-color: #F44336;
+    color: #fff;
+}
+
+.CList {
+    list-style-type: none;
+    
+}
+
+.CList > li {
+    line-height: 30px
+}
+
+.CList > li > i {
+    color: #3F51B5;
+    vertical-align: -2px;
+    margin-right: 5px;
+}
+
+.Cstatus {
+    border-bottom: solid 2px #eee;
+    padding: 0 5px 5px 5px;
+}
+
+.Cstatus.success {
+    color: #28D094;
+    border-color: #28D094;
+}
+
+.Cstatus.danger {
+    color: #FF4961;
+    border-color: #FF4961;
+}
