--- a/src/app/Layout/header/header.component.html
+++ b/src/app/Layout/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="header">
     <div class="logo logo-dark">
         <a href="index.html" style="text-align: center !important;">
-            <img src="assets/images/Logo.png" alt="Logo" style="width: 50px" class="m-t-5">
+            <img src="assets/images/LogoLarge.png" alt="Logo" style="width: 180px" class="m-t-5">
                 <img src="assets/images/Logo.png" alt="Logo" style="width: 50px;margin: 5px auto !important;" class="m-t-5 logo-fold">
         </a>
     </div>
     <div class="logo logo-white">
         <a href="index.html">
-            <img src="assets/images/Logo.png" alt="Logo" class="w-100">
+            <img src="assets/images/LogoLarge.png" alt="Logo" class="w-100">
             <img class="logo-fold" src="assets/images/Logo.png" alt="Logo" class="w-100">
         </a>
     </div>
@@ -32,7 +32,7 @@
         <ul class="nav-right">
             <li>
                 <a href="https://www.digifile.com">
-                    <i class="anticon anticon-home m-r-10"></i> <span style="font-size: 15px;">see website</span>
+                    <i class="anticon anticon-home"></i> <!--<span style="font-size: 15px;vertical-align: 2px;">see website</span>-->
                 </a>
             </li>
             <li class="dropdown dropdown-animated scale-left">
@@ -102,14 +102,14 @@
             <li class="dropdown dropdown-animated scale-left">
                 <div class="pointer" data-toggle="dropdown">
                     <div class="avatar avatar-image  m-h-10 m-r-15">
-                        <img src="assets/images/avatars/thumb-3.jpg"  alt="">
+                        <img src="assets/images/avatars/Peepo.png"  alt="">
                     </div>
                 </div>
                 <div class="p-b-15 p-t-20 dropdown-menu pop-profile">
                     <div class="p-h-20 p-b-15 m-b-10 border-bottom">
                         <div class="d-flex m-r-50">
                             <div class="avatar avatar-lg avatar-image">
-                                <img src="assets/images/avatars/thumb-3.jpg" alt="">
+                                <img src="assets/images/avatars/Peepo.png" alt="">
                             </div>
                             <div class="m-l-10">
                                 <p class="m-b-0 text-dark font-weight-semibold">Marshall Nichols</p>
