--- a/src/app/Layout/header/header.component.html
+++ b/src/app/Layout/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="header">
     <div class="logo logo-dark">
-        <a href="index.html" style="text-align: center !important;">
+        <a routerLink="/" style="text-align: center !important;">
             <img src="assets/images/LogoLarge.png" alt="Logo" style="width: 180px" class="m-t-5">
                 <img src="assets/images/Logo.png" alt="Logo" style="width: 50px;margin: 5px auto !important;" class="m-t-5 logo-fold">
         </a>
     </div>
     <div class="logo logo-white">
-        <a href="index.html">
+        <a routerLink="/">
             <img src="assets/images/LogoLarge.png" alt="Logo" class="w-100">
             <img class="logo-fold" src="assets/images/Logo.png" alt="Logo" class="w-100">
         </a>
