--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a routerLink="/categories/list" class="clickable">
+                <a routerLink="/category/list" class="clickable">
                     <span class="icon-holder">
                         <i class="anticon anticon-ordered-list"></i>
                     </span>
