Show orders as chart in dashboard

--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
                         <a routerLink="/user/list" class="clickable">List</a>
                     </li>
                     <li>
-                        <a routerLink="/roles/list" class="clickable">Roles & permissions</a>
+                        <a routerLink="/role/list" class="clickable">Roles & permissions</a>
                     </li>
                 </ul>
             </li>
