--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 col-lg-8">
+        <div class="col-md-12 col-lg-6">
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
@@ -79,12 +79,20 @@
                         </div>
                     </div>
                     <div class="m-t-50" style="height: 330px">
-                        <canvas class="chart" id="revenue-chart"></canvas>
+                        <!-- <canvas class="chart" id="revenue-chart"></canvas> -->
+                        <div style="display: block;">
+                            <canvas baseChart style="width: 100%" height="330"
+                              [type]="'line'"
+                              [data]="lineChartData"
+                              [options]="lineChartOptions"
+                              [legend]="lineChartLegend">
+                            </canvas>
+                          </div>                          
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-12 col-lg-4">
+        <div class="col-md-12 col-lg-6">
             <div class="card">
                 <div class="card-body">
                     <h5 class="m-b-0">Customers</h5>
